[package]
name = "async-postgres"
version = "0.7.0"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
description = "A runtime-independent, asynchronous PostgreSQL client."
repository = "https://github.com/Hexilee/async-postgres"
readme = "README.md"
keywords = ["database", "postgres", "postgresql", "sql", "async"]
categories = ["database"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[badges]
codecov = { repository = "Hexilee/async-postgres" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10"
bytes = "0.5"
tokio = "1"
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
futures = { version = "0.3", default-features = false }


[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"

[features]
docs = ["full"]
full = ["all-types"]
all-types = [
    "with-bit-vec-0_6",
    "with-chrono-0_4",
    "with-eui48-1",
    "with-geo-types-0_7",
    "with-serde_json-1",
    "with-uuid-0_8",
    "with-time-0_3"
]

with-bit-vec-0_6 = ["tokio-postgres/with-bit-vec-0_6"]
with-chrono-0_4 = ["tokio-postgres/with-chrono-0_4"]
with-eui48-0_4 = ["tokio-postgres/with-eui48-0_4"]
with-eui48-1 = ["tokio-postgres/with-eui48-1"]
with-geo-types-0_6 = ["tokio-postgres/with-geo-types-0_6"]
with-geo-types-0_7 = ["tokio-postgres/with-geo-types-0_7"]
with-serde_json-1 = ["tokio-postgres/with-serde_json-1"]
with-uuid-0_8 = ["tokio-postgres/with-uuid-0_8"]
with-time-0_2 = ["tokio-postgres/with-time-0_2"]
with-time-0_3 = ["tokio-postgres/with-time-0_3"]